gallery image borders should no longer overlap each other

--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,7 @@ html{
   width: 100%;
   height: 100%;
   border: 2px solid white;
+  z-index: 998
 }
 .galleryimg:hover{
   filter: brightness(80%);
